<?xml version="1.0"?>
<package>
  <name>robotino_description</name>
  <version>0.1.0</version>
  <description>The robotino_description package</description>
  <maintainer email="verbeek@servicerobotics.eu">Christian Verbeek</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/robotino_description</url>
  <author email="v@rec.de">Christian Verbeek</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
